Updated AbstractDataSource and its descendents to use URI instead of URL
git-svn-id: https://svn.code.sf.net/p/autoplot/code/autoplot/trunk@3057 0c594bb0-8543-0410-a25e-d8ec440261db