@@ -9,10 +9,9 @@
 
 package org.virbo.spase;
 
+import java.net.URI;
 import org.das2.util.monitor.NullProgressMonitor;
-import java.net.URL;
 import java.util.Map;
-import javax.swing.tree.TreeModel;
 
 /**
  *
@@ -28,7 +27,7 @@ public class TestSpase {
      * @param args the command line arguments
      */
     public static void main(String[] args) throws Exception {
-        SpaseRecordDataSource ds= new SpaseRecordDataSource( new URL( "file:/L:/ct/virbo/autoplot/sample2.xml" ) );
+        SpaseRecordDataSource ds= new SpaseRecordDataSource( new URI( "file:/L:/ct/virbo/autoplot/sample2.xml" ) );
         Map<String,Object> meta= ds.getMetaData(new NullProgressMonitor());
         SpaseMetadataModel metamodel= new SpaseMetadataModel();
         Map props= metamodel.properties( meta );
