@@ -6,8 +6,8 @@ package org.virbo.fits;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -29,8 +29,8 @@ import org.virbo.datasource.DataSource;
 public class FitsDataSourceFactory extends AbstractDataSourceFactory {
 
     @Override
-    public DataSource getDataSource(URL url) throws Exception {
-        return new FitsDataSource(url);
+    public DataSource getDataSource(URI uri) throws Exception {
+        return new FitsDataSource(uri);
     }
 
     @Override
@@ -40,12 +40,12 @@ public class FitsDataSourceFactory extends AbstractDataSourceFactory {
         if (cc.context.equals(CompletionContext.CONTEXT_PARAMETER_NAME)) {
             try {
                 String surl = CompletionContext.get(CompletionContext.CONTEXT_FILE, cc);
-                Set<String> plottable = getPlottable(new URL(surl), mon).keySet();
+                Set<String> plottable = getPlottable(new URI(surl), mon).keySet();
                 for (String s : plottable) {
                     result.add(new CompletionContext(CompletionContext.CONTEXT_PARAMETER_NAME, s, this, "arg_0"));
                 }
 
-            } catch (MalformedURLException ex) {
+            } catch (URISyntaxException ex) {
                 throw new RuntimeException(ex);
             } catch (IOException ex) {
                 throw new RuntimeException(ex);
@@ -55,8 +55,8 @@ public class FitsDataSourceFactory extends AbstractDataSourceFactory {
         return result;
     }
 
-    protected static Map<String,Integer> getPlottable(URL url, ProgressMonitor mon) throws IOException, FitsException {
-        File f = DataSetURL.getFile(url, mon);
+    protected static Map<String,Integer> getPlottable(URI uri, ProgressMonitor mon) throws IOException, FitsException {
+        File f = DataSetURL.getFile(uri, mon);
         FitsFile file = new FitsFile(f);
 
         Map<String,Integer> result= new LinkedHashMap<String,Integer>();
